# my-business

./: .gitignore  alembic.ini  logging.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_10_14_1739-857c8fdf4d80_init_tables_company_and_user.py  2024_10_15_1609-6de53eb36a9f_rename_col.py  2024_10_25_1550-d38f56ea732f_add_ltree.py  2024_10_25_1959-477b44955f68_add_department.py  2024_11_01_2000-14327b7a6d76_add_position.py  2024_11_05_1455-1373e3317818_add_department_position_link.py  2024_11_05_1925-f91bf7407f7b_add_head_of_department.py  2024_11_06_1529-fe0dbe7913ce_add_task.py
src/: config.py  main.py
src/api/v1/: __init__.py
src/api/v1/dependencies/: __init__.py  admin.py  department.py  employee.py  position.py  signup_valid_user.py  task.py
src/api/v1/routers/: department.py  department_position.py  employee.py  employee_position.py  position.py  signin.py  signup.py  task.py
src/api/v1/services/: __init__.py  company.py  department.py  department_position.py  employee.py  employee_position.py  position.py  signin.py  signup.py  task.py  user.py
src/database/: __init__.py  db.py
src/middlware/: auth.py
src/models/: __init__.py  base.py  company.py  departament_position.py  department.py  position.py  task.py  user.py
src/repositories/: __init__.py  company.py  department.py  department_position.py  position.py  task.py  task_executors.py  task_observers.py  user.py
src/schemas/: base.py  department.py  employee.py  position.py  signin.py  signup.py  task.py
src/utils/: custom_types.py  exceptions.py  mail_util.py  repository.py  service.py  unit_of_work.py
src/utils/auth/: __init__.py  token.py  token_.py  utils.py
